[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_05/Pawn_05_Part_Head.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_05/Pawn_05_Part_Face.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_05/Pawn_05_Part_Body.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_05/Pawn_05_Part_Arm.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_05/Pawn_05_Part_Key.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_05/Pawn_05_Part_Wheel.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Pawns/Pawn_05_Parts/Pawn_05_Pic.gd" type="Script" id=7]

[node name="Pawn_05_Pic" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite_Head" type="Sprite" parent="."]
self_modulate = Color( 0.713726, 0.713726, 0.713726, 1 )
position = Vector2( 0, -21 )
texture = ExtResource( 1 )
hframes = 3

[node name="Sprite_Wheel" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 6 )
vframes = 5
hframes = 4

[node name="Sprite_Key" type="Sprite" parent="."]
position = Vector2( -12, -7 )
texture = ExtResource( 5 )
vframes = 3
hframes = 5

[node name="Sprite_Body" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="Sprite_Arm" type="Sprite" parent="."]
position = Vector2( 11, -5 )
texture = ExtResource( 4 )
hframes = 3

[node name="Sprite_Face" type="Sprite" parent="."]
position = Vector2( 0, -21 )
texture = ExtResource( 2 )
hframes = 3
